# ProgressiveMeshes

./: .gitignore  CMakeLists.txt
MeshSimplification/: CMakeLists.txt  main.cpp  simplification.cpp  utility.cpp
Src/: CMakeLists.txt  simplification.cpp  simplification.h
